webpack is coming!~

--- a/vue/模块化开发/模块化开发.md
+++ b/vue/模块化开发/模块化开发.md
@@ -4,6 +4,12 @@
 
 ## 二、前端模块化
 
+* 在ES6之前, 我们要想进行模块化开发, 就必须借助于其他的工具, 让我们可以进行模块化开发.
+* 并且在通过模块化开发完成项目后, 还需要处理模块间的各种依赖, 并且将其进项整合打包.
+* 而webpack其中一个核心就是让我们可能进行模块化开发, 并且会帮助我们处理模块间的依赖关系.
+* 而且不仅仅是JavaScript文件, 我们的css、imgs、json文件等等在webpack中都可被当做模块来使用.
+* 这就是webpack中模块化的概念.
+
 ## 三、webpack
 
 ## 四、Vue CLI
